# fill_prompt

./: .gitignore  Cargo.toml  LICENSE-APACHE-MIT  Makefile  README.md  deny.toml
.github/workflows/: ci.yml
benches/: bench_fill.rs  criterion.toml
docs/: design.md
examples/: basic.rs
fuzz/: .gitignore  Cargo.toml  README.md  harness.rs
fuzz/fuzz_targets/: fill_prompt.rs
src/: lib.rs  validate.rs  vars.rs
templates/: gen_test_1.tpl  gen_test_2.tpl
tests/: cli.rs  integration.rs  property.rs  vars.rs
vars/: basic.json  basic.toml  basic.yaml  override.toml
