[package]
name = "fill_prompt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Remplissage sûr de templates de prompt par substitution de variables."
readme = "README.md"
repository = ""
keywords = ["prompt", "template", "cli", "rust"]
categories = ["command-line-utilities", "parsing"]

[package.metadata]
msrv = "1.90.0"

[lib]
name = "fill_prompt"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

# optional deps for parsing (activated via feature "serde")
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.7", optional = true }

# optional bench dependency
criterion = { version = "0.4", optional = true }

[features]
# no default features (keeps build minimal)
default = []

# feature "serde" activates the optional parsing crates above
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:toml"]

# feature "bench" activates criterion when needed
bench = ["dep:criterion"]

[dev-dependencies]
proptest = "1.0"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
